--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/OCRAPP-Android
+    working_directory: ~/OCRAPPAndroid
     docker:
       - image: circleci/android:api-25-alpha
     environment:
