--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,13 +1,14 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/OCRAppAndroid
+    working_directory: ~/OCRAppAndroid/app
     docker:
       - image: circleci/android:api-25-alpha
     environment:
       JVM_OPTS: -Xmx3200m
     steps:
       - checkout
+      path: ~/OCRAppAndroid
 #      - restore_cache:
  #         key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
 #      - run:
