--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
 #         command: sudo chmod +x ./gradlew
       - run:
           name: Download Dependencies
-          command: sudo chmod +x ./gradlew
+          command: |sudo chmod +x ./gradlew
           ./gradlew androidDependencies 
       - save_cache:
           paths:
