--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,14 +6,21 @@ jobs:
       - image: circleci/android:api-25-alpha
     environment:
       JVM_OPTS: -Xmx3200m
+    dependencies:
+    override:
+    - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-21.1.2,android-21,extra-google-m2repository,extra-google-google_play_services,extra-android-support
+    - chmod +x gradlew
+    - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
+
+
     steps:
       - checkout
    
 #      - restore_cache:
  #         key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      - run:
-        name: Chmod permissions 
-        command: chmod +x ./gradlew
+ #     - run:
+  #      name: Chmod permissions 
+   #     command: sudo chmod +x ./gradlew
       - run:
           name: Download Dependencies
           command: ./gradlew androidDependencies 
