--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,13 +4,19 @@ jobs:
     working_directory: ~/OCRAppAndroid
     docker:
       - image: circleci/android:api-25-alpha
-    environment:
-      JVM_OPTS: -Xmx3200m
-    dependencies:
-    override:
-    - echo y | android update sdk --no-ui --all --filter tools,platform-tools,build-tools-21.1.2,android-21,extra-google-m2repository,extra-google-google_play_services,extra-android-support
-    - chmod +x gradlew
-    - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
+  
+  machine:
+  environment:
+    ANDROID_HOME: /usr/local/android-sdk-linux
+
+dependencies:
+  override:
+     - chmod +x gradlew
+     - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
+
+test:
+  override:
+    - ./gradlew test
 
 
     steps:
