--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,44 +3,34 @@ jobs:
   build:
     working_directory: ~/OCRAppAndroid
     docker:
-      - image: circleci/android:api-25-alpha
-  
-  machine:
-  environment:
-    ANDROID_HOME: /usr/local/android-sdk-linux
-
-dependencies:
-  override:
-     - chmod +x gradlew
-     - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
-
-
-
-
+      - image: dwillmc/android-27-alpha-ndk
+    environment:
+      ANDROID_HOME: /usr/local/android-sdk-linux
+      JVM_OPTS: -Xmx3200m
     steps:
       - checkout
-   
-#      - restore_cache:
- #         key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
- #     - run:
-  #      name: Chmod permissions 
-   #     command: sudo chmod +x ./gradlew
+      - restore_cache:
+          key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
           name: Download Dependencies
-          command: ./gradlew androidDependencies 
+          pre:
+            - echo y | android update sdk --no-ui --all --filter "platform-tools, tools"
+            - echo y | android update sdk --no-ui --all --filter "android-24, build-tools-25.0.2"
+            - echo y | android update sdk --no-ui --all --filter "extra-android-m2repository"
+            - echo y | android update sdk --no-ui --all --filter "extra-android-support"
+          command: chmod +x ./gradlew
+          command: chmod +x gradlew
+          command: ./gradlew --gradle-version 4.8 --distribution-type all
+          command: ./gradlew androidDependencies
       - save_cache:
           paths:
             - ~/.gradle
           key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
       - run:
           name: Run Tests
-          command: ./gradlew lint test
-      - store_artifacts: # for display in Artifacts: https://circleci.com/docs/2.0/artifacts/ 
+          command: ./gradlew testDebug
+      - store_artifacts:
           path: app/build/reports
           destination: reports
-      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
-          path: app/build/test-results
-      # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
-         # See https://circleci.com/docs/2.0/deployment-integrations/ for deploy examples
-      
-   
+      - store_test_results:
+          path: app/build/test-result
