--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,21 +1,12 @@
 version: 2
+
 jobs:
   build:
-    working_directory: ~/OCRAppAndroid
+    working_directory: ~/code
     docker:
       - image: circleci/android:api-25-alpha
-  
-  machine:
-  environment:
-    ANDROID_HOME: /usr/local/android-sdk-linux
-
-dependencies:
-  override:
-     - chmod +x gradlew
-     - ANDROID_HOME=/usr/local/android-sdk-linux ./gradlew dependencies
-
-
-
+    environment:
+      JVM_OPTS: -Xmx4G
 
     steps:
       - checkout
