--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -20,7 +20,9 @@ jobs:
    #     command: sudo chmod +x ./gradlew
       - run:
           name: Download Dependencies
-          command: ./gradlew androidDependencies 
+          command:|
+        sudo chmod +x gradlew 
+        ./gradlew dependencies# ./gradlew androidDependencies 
       - save_cache:
           paths:
             - ~/.gradle
