--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,11 +11,9 @@ jobs:
     steps:
       - checkout
    
-#      - restore_cache:
- #         key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
-      - run
-        name: Chmod permissions
-        command: sudo chmod +x gradlew
+     - restore_cache:
+        key: jars-{{ checksum "build.gradle" }}-{{ checksum  "app/build.gradle" }}
+      
       - run:
           name: Download Dependencies
           command: ./gradlew dependencies # ./gradlew androidDependencies 
