--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@
 version: 2
 jobs:
   build:
-    working_directory: ~/OCRAppAndroid
+    working_directory: ~/code
     docker:
       - image: circleci/android:api-28-alpha
     environment:
