--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,9 +15,12 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
 
         //Default Configuration
-        buildConfigField "String", "BASEURL", "\"http://www.ocrwebservice.com/\""
+        buildConfigField "String", "BASEURL", "\"https://api.ocr.space/parse/\""
+
 
     }
+
+
     buildTypes {
         release {
             minifyEnabled false
@@ -30,34 +33,25 @@ ext
             dagger_version='2.14.1'
         }
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation"org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-
     //Retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.5.0'
-
     //rx java
     implementation 'io.reactivex:rxandroid:1.2.1'
     implementation 'io.reactivex:rxjava:1.1.6'
-
     //Dagger2
     // dagger
     kapt "com.google.dagger:dagger-compiler:$dagger_version"
     implementation "com.google.dagger:dagger:$dagger_version"
-
     // dagger android
     kapt "com.google.dagger:dagger-android-processor:$dagger_version"
-
     implementation "com.google.dagger:dagger-android-support:$dagger_version"
-
-    implementation project(path: ':tesseractandroidtools')
-
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-
 }
